# TrIPP

./: .gitignore  README.md  i.py  pyproject.toml  requirements.txt  setup.py  test.ipynb  tutorial.ipynb
.ipynb_checkpoints/: README-checkpoint.md
TrIPP/: TrIPP_functions.py  Trajectory.py  Visualization.py  edit_pdb.py  visualise_pka.py
TrIPP_test/: test_TRIPP_functions.py
docs/: 12May2025_update_notes.txt  18Nov2024_update_notes.docx  30Jan2025_update_notes.txt
testing/: test_pka.csv
tests/: test_Clustering.py  test_Installation.py  test_Trajectory.py  test_Visualization.py  test_analysis.py  test_clustering_dbscan_.py  test_clustering_greedy_.py  test_clustering_hdbscan_.py  test_clustering_kmedoids_.py  test_create_clustering_matrix_.py  test_create_mda_universe_.py  test_determine_charge_center_.py  test_installation.py  test_pca_.py  test_pka_iterator_.py  test_sort_pka_df_.py
tripp/: Clustering.py  Trajectory.py  Visualization.py  _calculate_charge_center_distances_.py  _calculate_rmsd_matrix_.py  _clustering_dbscan_.py  _clustering_greedy_.py  _clustering_gromos_.py  _clustering_hdbscan_.py  _clustering_kmedoids_.py  _correction_dictionary_.py  _create_clustering_matrix_.py  _create_mda_universe_.py  _density_clustering_utilities_.py  _detect_disulphide_bonds_.py  _determine_charge_center_.py  _determine_cluster_population_ratio_.py  _edit_pdb_.py  _extract_pka_file_data_.py  _generate_clustering_summary_.py  _generate_trajectory_log_.py  _model_pka_values_.py  _pca_.py  _pka_iterator_.py  _propka_input_check_.py  _pymol_template_.py  _sort_clusters_.py  (+9 more)
(+153 files in other folders)
