[tool.poetry]
name = "tripp"
version = "0.1.0"
description = "Trajectory Iterative pKa Predictor"
authors = ["Christos Matsingos <c.matsingos@qmul.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.1"
propka = "^3.4.0"
mdanalysis = "^2.4.2"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
